K1J-1468: Fixed comments in PR